Update 1. Install Ansible in RHEL8.md

--- a/Ansible/1. Install Ansible in RHEL8.md
+++ b/Ansible/1. Install Ansible in RHEL8.md
@@ -29,7 +29,7 @@ index-url = https://mirrors.aliyun.com/pypi/simple/   #阿里云仓库
 https://developers.redhat.com/products/rhel/download
 ```
 
-## Ansible pip安装(ansible2.9之后)
+## Ansible pip安装(>=ansible2.10)
 > 两种安装，择其一即可
 ### Ansible 源码安装
 ```
@@ -66,7 +66,7 @@ ansible [core 2.14.1]
 
 
 ```
-## Anisble 源码安装(2.9之前选用)
+## Anisble 源码安装(<2.9)
 ```
 1. 添加 Ansible EPEL 添加仓库 
 dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
